--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.1",
+    "@mdi/js": "^5.3.45",
+    "@mdi/react": "^1.4.0",
     "express": "^4.16.3",
-    "mdi-material-ui": "^5.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
